--- a/FIC/mss.ipynb
+++ b/FIC/mss.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "448d5158-5bfa-4f21-8651-f9e0234b8f38",
    "metadata": {},
    "outputs": [],
@@ -36,12 +36,13 @@
     "from datasets import load_dataset\n",
     "from walloc import walloc\n",
     "from spauq.core.metrics import spauq_eval\n",
+    "from fastprogress.fastprogress import progress_bar\n",
     "class Config: pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "518cefc3-ab2a-4b08-aeae-d5e449e3bba5",
    "metadata": {},
    "outputs": [
@@ -74,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "068d2dae-0633-4689-9a26-d1df46532b0f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adc08a98d60943659c2c8d1bc6424bba",
+       "model_id": "a403f0774f30439aaed2d8bd7f7f7296",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67cdac8cd7844c1bbda46b8e01563b5f",
+       "model_id": "f7ce76f4e02946bd94e349a4d929e738",
        "version_major": 2,
        "version_minor": 0
       },
@@ -109,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "651394f0d62d44718031aea88faf1747",
+       "model_id": "9b8866c7e3f54124b71c90acdea92ee9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a5a924f3e624d2e98aa1bc1f08d46b1",
+       "model_id": "19085f3dcc5c47e583570d2f81f0f2bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,18 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "263cece1-6297-43e2-93a8-b3209723c080",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sources = ['other', 'drums', 'bass', 'vocals']\n",
     "separator = Separator()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "927b458d-dd37-4fa5-8650-8b665033e898",
    "metadata": {},
    "outputs": [],
@@ -167,10 +167,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "af12eefe-0925-4458-9577-760f3fa10d5e",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "    /* Turns off some styling */\n",
+       "    progress {\n",
+       "        /* gets rid of default border in Firefox and Opera. */\n",
+       "        border: none;\n",
+       "        /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "        background-size: auto;\n",
+       "    }\n",
+       "    progress:not([value]), progress:not([value])::-webkit-progress-bar {\n",
+       "        background: repeating-linear-gradient(45deg, #7e7e7e, #7e7e7e 10px, #5c5c5c 10px, #5c5c5c 20px);\n",
+       "    }\n",
+       "    .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "        background: #F44336;\n",
+       "    }\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      <progress value='50' class='' max='50' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [50/50 16:27&lt;00:00]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -182,8 +226,12 @@
    ],
    "source": [
     "max_duration=44100*180\n",
+    "SSDR = []\n",
+    "SRDR = []\n",
     "with torch.no_grad():\n",
-    "    for i_sample in range(0, len(MUSDB), 5):\n",
+    "    for i_sample in progress_bar(range(0, len(MUSDB), 5)):\n",
+    "        SSDR.append([])\n",
+    "        SRDR.append([])\n",
     "        y = []\n",
     "        for i_instr in range(5):\n",
     "            sample = MUSDB[i_sample+i_instr]\n",
@@ -200,29 +248,103 @@
     "                    estimate=pred[1][instr].to(\"cpu\"),\n",
     "                    fs = fs\n",
     "                )\n",
-    "                break\n",
-    "        break"
+    "                SSDR[-1].append(SDR['SSR'])\n",
+    "                SRDR[-1].append(SDR['SRR'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "6acc574b-4f36-4c32-b11a-03bdbcb79a96",
+   "execution_count": 10,
+   "id": "4d6cb95b-9002-47ab-a192-27b6b44f9587",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SSDR = torch.tensor(SSDR)\n",
+    "SRDR = torch.tensor(SRDR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "256997e0-c8a7-4dfc-acfe-e54e0f7612f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'SSR': 12.12786068375291, 'SRR': 5.170535327707984}"
+       "tensor([13.7626, 22.2533, 15.6400, 14.2794], dtype=torch.float64)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SDR"
+    "SSDR.mean(dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2b13d21f-3697-4219-b3cf-04651c43220e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(16.4838, dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SSDR.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "05e9618f-6e25-47a1-9c04-765c5a3729d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 4.9881,  9.9290,  0.7201, -0.3462], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SRDR.mean(dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "85c98f2b-8c52-4a0e-81e3-56b6ea9d0be6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(3.8228, dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SRDR.mean()"
    ]
   }
  ],
