--- a/FIC/mss_walloc.ipynb
+++ b/FIC/mss_walloc.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "af12eefe-0925-4458-9577-760f3fa10d5e",
    "metadata": {},
    "outputs": [
@@ -203,8 +203,8 @@
       "text/html": [
        "\n",
        "    <div>\n",
-       "      <progress value='0' class='' max='50' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      0.00% [0/50 00:00&lt;?]\n",
+       "      <progress value='50' class='' max='50' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [50/50 16:36&lt;00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -263,40 +263,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "256997e0-c8a7-4dfc-acfe-e54e0f7612f3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([14.0237, 17.3669, 15.4579, 11.6876], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SSDR.mean(dim=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2b13d21f-3697-4219-b3cf-04651c43220e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(14.6340, dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SSDR.mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "05e9618f-6e25-47a1-9c04-765c5a3729d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([ 4.3192,  7.3617,  0.3864, -1.6658], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SRDR.mean(dim=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "85c98f2b-8c52-4a0e-81e3-56b6ea9d0be6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(2.6004, dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SRDR.mean()"
    ]
