--- a/FIC/mss_rr.ipynb
+++ b/FIC/mss_rr.ipynb
@@ -318,6 +318,27 @@
    "source": [
     "SRDR.mean()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "872c39d1-459e-405f-a54a-49893e68c46c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(9.3876, dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10*np.log10( 10**(SSDR.mean()/10) + 10**(SRDR.mean()/10) ) - 10*np.log10(2)"
+   ]
   }
  ],
  "metadata": {
