--- a/FIC/mss_walloc.ipynb
+++ b/FIC/mss_walloc.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://hf.co/danjacobellis/walloc/resolve/main/Stereo_Li_192c_J8_nf8_v1.0.2.pth"
+    "!wget https://hf.co/danjacobellis/walloc/resolve/main/Stereo_Li_48c_J8_nf8_v1.0.2.pth"
    ]
   },
   {
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "448d5158-5bfa-4f21-8651-f9e0234b8f38",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "518cefc3-ab2a-4b08-aeae-d5e449e3bba5",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
    ],
    "source": [
     "device = \"cuda\"\n",
-    "checkpoint = torch.load(\"Stereo_Li_192c_J8_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
+    "checkpoint = torch.load(\"Stereo_Li_48c_J8_nf8_v1.0.2.pth\",map_location=\"cpu\",weights_only=False)\n",
     "codec_config = checkpoint['config']\n",
     "codec = walloc.Codec1D(\n",
     "    channels = codec_config.channels,\n",
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "068d2dae-0633-4689-9a26-d1df46532b0f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "caeed21ec3f74c2ea5838a5f4726d712",
+       "model_id": "9bac2474426642c586d24db4a0b3026b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ad2aea518e54d0cb8598b035a4ab881",
+       "model_id": "6784f5ebef91443581732563c79216da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,7 +110,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef43dee6319848a39433b8088a9879b5",
+       "model_id": "cb92311cdcb54c5bb4813d13389b90df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,7 +124,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ef25f98cd4fb4435b4e8e2ac906dde8b",
+       "model_id": "28873c7e1c9e44fc979cbe209577924b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "263cece1-6297-43e2-93a8-b3209723c080",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "927b458d-dd37-4fa5-8650-8b665033e898",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "af12eefe-0925-4458-9577-760f3fa10d5e",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "\n",
        "    <div>\n",
        "      <progress value='50' class='' max='50' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [50/50 16:36&lt;00:00]\n",
+       "      100.00% [50/50 16:30&lt;00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -256,24 +256,33 @@
     "                    fs = fs\n",
     "                )\n",
     "                SSDR[-1].append(SDR['SSR'])\n",
-    "                SRDR[-1].append(SDR['SRR'])\n",
+    "                SRDR[-1].append(SDR['SRR'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "54a923ad-dd8e-4866-86a2-bbce6ec30e12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "SSDR = torch.tensor(SSDR)\n",
     "SRDR = torch.tensor(SRDR)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "256997e0-c8a7-4dfc-acfe-e54e0f7612f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([14.0237, 17.3669, 15.4579, 11.6876], dtype=torch.float64)"
+       "tensor([13.2559, 15.5136, 15.3820,  8.6435], dtype=torch.float64)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,17 +293,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "2b13d21f-3697-4219-b3cf-04651c43220e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(14.6340, dtype=torch.float64)"
+       "tensor(13.1987, dtype=torch.float64)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,17 +314,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "05e9618f-6e25-47a1-9c04-765c5a3729d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([ 4.3192,  7.3617,  0.3864, -1.6658], dtype=torch.float64)"
+       "tensor([ 2.5869,  5.3888, -0.1783, -4.6491], dtype=torch.float64)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,23 +335,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "85c98f2b-8c52-4a0e-81e3-56b6ea9d0be6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(2.6004, dtype=torch.float64)"
+       "tensor(0.7871, dtype=torch.float64)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "SRDR.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7717a87f-b836-4084-888b-34fc88e48e6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(10.4308, dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "10*np.log10( 10**(SSDR.mean()/10) + 10**(SRDR.mean()/10) ) - 10*np.log10(2)"
    ]
   }
  ],
