--- a/FIC/mss_rr.ipynb
+++ b/FIC/mss_rr.ipynb
@@ -49,7 +49,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d763ae61e6224e3fbd811f2c03f993f5",
+       "model_id": "3125fe6ee77c4d17934a05c536ec2074",
        "version_major": 2,
        "version_minor": 0
       },
@@ -63,7 +63,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f3daaddade094ddba85192d7bede3cb6",
+       "model_id": "4a7418efddf94db8852f86c54ae6c566",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,7 +77,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "276221a3af1349b78ada14484cd0870b",
+       "model_id": "19f3432ca1814342b24a7dde016c2a09",
        "version_major": 2,
        "version_minor": 0
       },
@@ -91,7 +91,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "984f7873b38b47a2a07fb0ba31e6e6d5",
+       "model_id": "9f8e79117a144078ada8b1a555fba934",
        "version_major": 2,
        "version_minor": 0
       },
@@ -171,7 +171,7 @@
        "\n",
        "    <div>\n",
        "      <progress value='50' class='' max='50' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [50/50 16:16&lt;00:00]\n",
+       "      100.00% [50/50 16:38&lt;00:00]\n",
        "    </div>\n",
        "    "
       ],
@@ -197,8 +197,8 @@
     "max_duration=44100*180\n",
     "SSDR = []\n",
     "SRDR = []\n",
-    "res_red = torchaudio.transforms.Resample(44100, 44100*3//32).to(device)\n",
-    "res_inc = torchaudio.transforms.Resample(44100*3//32, 44100).to(device)\n",
+    "res_red = torchaudio.transforms.Resample(44100, 16536).to(device)\n",
+    "res_inc = torchaudio.transforms.Resample(16536, 44100).to(device)\n",
     "with torch.no_grad():\n",
     "    for i_sample in progress_bar(range(0, len(MUSDB), 5)):\n",
     "        SSDR.append([])\n",
@@ -244,7 +244,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([10.7148, 16.2231, 14.6784,  6.9571], dtype=torch.float64)"
+       "tensor([13.9374, 19.4491, 16.0890, 12.7350], dtype=torch.float64)"
       ]
      },
      "execution_count": 8,
@@ -265,7 +265,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(12.1434, dtype=torch.float64)"
+       "tensor(15.5526, dtype=torch.float64)"
       ]
      },
      "execution_count": 9,
@@ -286,7 +286,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([ 2.1889,  5.5734, -0.9514, -7.0044], dtype=torch.float64)"
+       "tensor([ 4.9850,  8.4285,  0.6680, -1.0341], dtype=torch.float64)"
       ]
      },
      "execution_count": 10,
@@ -307,7 +307,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor(-0.0483, dtype=torch.float64)"
+       "tensor(3.2618, dtype=torch.float64)"
       ]
      },
      "execution_count": 11,
@@ -321,17 +321,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "872c39d1-459e-405f-a54a-49893e68c46c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(9.3876, dtype=torch.float64)"
+       "tensor(12.7913, dtype=torch.float64)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
